# ticket-mannagement

./: .gitignore  README.md
bff_service/: BUILD.bazel  Makefile  config.yaml
bff_service/adapter/iam/: client.go
bff_service/adapter/tm/: client.go
bff_service/api/: BUILD.bazel  api.pb.go  api.pb.gw.go  api.pb.validate.go  api.proto  api_pb2.py  data.pb.go  data.pb.validate.go  data.proto  data_pb2.py  event.pb.go  event.pb.validate.go  event.proto  event_pb2.py
bff_service/cmd/: BUILD.bazel  initialize.go  main.go
bff_service/config/: BUILD.bazel  config.go  config_gen.go
bff_service/custom_constants/: constants.go
bff_service/internal/cache/: BUILD.bazel
bff_service/internal/pubsub/: BUILD.bazel  pubsub.go  pubsub_gen.go
bff_service/internal/service/: BUILD.bazel  auth_interceptor.go  register_gen.go  service.go
bff_service/internal/store/: BUILD.bazel  db.go  models.go  querier.go
bff_service/sql/queries/: queries.sql
iam_service/: BUILD.bazel  Makefile  config.yaml  sqlc.yaml
iam_service/api/: BUILD.bazel  api.pb.go  api.pb.gw.bak  api.pb.gw.go  api.pb.validate.go  api.proto  api_pb2.py  data.pb.go  data.pb.validate.go  data.proto  data_pb2.py  event.pb.go  event.pb.validate.go  event.proto  event_pb2.py
iam_service/cmd/: BUILD.bazel  initialize.go  main.go  pubsub_action.go
iam_service/config/: BUILD.bazel  config_gen.go
iam_service/internal/cache/: BUILD.bazel
iam_service/internal/pubsub/: BUILD.bazel  pubsub.go  pubsub_gen.go
iam_service/internal/service/: BUILD.bazel  register_gen.go  service.go
iam_service/internal/store/: BUILD.bazel  db.go  models.go  querier.go  users.sql.go
iam_service/sql/migrations/: 20240527180853_create-schemas.down.sql  20240527180853_create-schemas.up.sql
iam_service/sql/queries/: users.sql
tm_service/: BUILD.bazel  Makefile  config.yaml
tm_service/api/: api.pb.go  api.pb.gw.go  api.pb.validate.go  api.proto  api_pb2.py  data.pb.go  data.pb.validate.go  data.proto  data_pb2.py  event.pb.go  event.pb.validate.go  event.proto  event_pb2.py
tm_service/cmd/: commands.go  initialize.go  main.go
tm_service/config/: config.go  config_gen.go
tm_service/internal/pubsub/: pubsub.go  pubsub_gen.go
tm_service/internal/service/: register_gen.go  service.go
tm_service/internal/store/: db.go  models.go  querier.go  queries.sql.bak  store_gen.go  store_querier.go  tickets.sql.go
tm_service/sql/migrations/: 20240528174443_create-schemas.up.sql
tm_service/sql/queries/: tickets.sql
