package(default_visibility = ["//visibility:public"])

## docker build
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

filegroup(
    name = "migration_files",
    srcs = glob(["sql/migrations/*"]),
)

filegroup(
    name = "data_files",
    srcs = glob(["data/*"]),
)

go_image(
    name = "base_binary_image",
    binary = "//app/warehouse/tm_service/cmd:cmd",
)

container_image(
    name = "container_image",
    base = ":base_binary_image",
    cmd = ["server"],
    data_path = "app/warehouse/tm_service",
    directory = "/app/app/warehouse/tm_service/cmd/cmd.runfiles/tekone/",
    files = [
        ":migration_files",
        ":data_files",
    ],
    ports = [
        "8080",
        "10443",
    ],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":container_image",
    registry = "asia.gcr.io",
    repository = "teko-registry/tekone/warehouse/tm_service",
    skip_unchanged_digest = True,
    tag = "{GIT_COMMIT_COUNT}",
)
