load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "initialize.go",
        "main.go",
        "pubsub_action.go",
    ],
    importpath = "go.tekoapis.com/tekone/app/warehouse/iam_service/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/warehouse/iam_service/config:go_default_library",
        "//app/warehouse/iam_service/internal/service:go_default_library",
        "//app/warehouse/iam_service/internal/store:go_default_library",
        "//library/database/migrate:go_default_library",
        "//library/server:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
