load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "config_gen.go",
    ],
    importpath = "go.tekoapis.com/tekone/app/warehouse/iam_service/config",
    visibility = ["//visibility:public"],
    deps = [
        "//library/conf:go_default_library",
        "//library/database:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
