load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "models.go",
        "querier.go",
        "queries.sql.go",
        "store_gen.go",
        "store_querier.go",
    ],
    importpath = "go.tekoapis.com/tekone/app/warehouse/bff_service/internal/store",
    visibility = ["//app/warehouse/bff_service:__subpackages__"],
    deps = ["@com_github_jmoiron_sqlx//:go_default_library"],
)
