load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "register_gen.go",
        "service.go",
    ],
    importpath = "go.tekoapis.com/tekone/app/warehouse/iam_service/internal/service",
    visibility = ["//app/warehouse/iam_service:__subpackages__"],
    deps = [
        "//app/warehouse/iam_service/api:go_default_library",
        "//app/warehouse/iam_service/internal/store:go_default_library",
        "//library/grpc/health:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
