load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "models.go",
        "querier.go",
        "store_gen.go",
        "store_querier.go",
        "users.sql.go",
    ],
    importpath = "go.tekoapis.com/tekone/app/warehouse/iam_service/internal/store",
    visibility = ["//app/warehouse/iam_service:__subpackages__"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
    ],
)
